<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Animation.Design.BottomSheetDialog"
    tools:context=".loginscreen.ForgotPasswordDialogFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpass"
        style="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass_description"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="8dp"
        android:id="@+id/forgotpass_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotpass_input_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="9dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:backgroundTint="#0EBE7F"/>



</LinearLayout>