<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".loginscreen.ForgotPasswordDialogFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        style="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_description"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/forgotpass_input_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/new_password"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_pass">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotpass_input_pass_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/forgotpass_input_repass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/re_enter_password"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_pass">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotpass_input_repass_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_password"
        android:backgroundTint="#0EBE7F"/>

</LinearLayout>